# JavaForQuest

./: .gitignore  README.md
J4Q_46.0/: VrApp.gradle  local.properties
J4Q_46.0/JavaForQuest/: CMakeLists.txt
J4Q_46.0/JavaForQuest/J4Q/: CMakeLists.txt
J4Q_46.0/JavaForQuest/J4Q/Src/: J4Q_NativeActivity.c
J4Q_46.0/JavaForQuest/Projects/: .gitignore
J4Q_46.0/JavaForQuest/Src/: XrCompositor_NativeActivity.c
J4Q_46.0/SampleXrFramework/Src/: XrApp.cpp
J4Q_46.0/XrSamples/: generate_xr_sample_template.py
J4Q_85.0/JavaForQuest/J4Q/: CMakeLists.txt
J4Q_85.0/Samples/SampleXrFramework/: CMakeLists.txt
J4Q_85.0/Src/: XrCompositor_NativeActivity.c
assets/shaders/: 360background.frag  colors.vert  colorsPhong.vert  flat.frag  matCap.vert  normalMapMatCap.frag  normals.vert  textured.vert  texturedNormalMapPhong.frag  texturedPhong.frag  texturedPhong.vert
docs/: Contents.md
java/gl/activities/: GameEngineActivity.java  QuestActivity.java
java/gl/geometry/: Transform.java
java/gl/models/: Background360.java  Model.java
java/gl/shaders/: Background360Shader.java  ColorPhongShader.java  MatCapShader.java  NormalMapPhongShader.java  TextureShader.java
java/j4q/: Audio.java  J4Q.java
java/j4q/activities/: GameEngineActivity.java  GameEngineScene.java  QuestActivity.java
java/j4q/controllers/: J4QController.java  J4QJoystick.java  J4QLeftController.java  J4QPose.java  J4QPressureButton.java  J4QRightController.java  J4QToggleButton.java
java/j4q/formats/: OBJFile.java
java/j4q/geometry/: Orientation.java  Position.java  Transform.java
(+343 files in other folders)
